@@ -394,8 +394,7 @@ version below.
   <p>
 In the nearest future, I plan to add some interactive help and some
 more examples to the documentation, perhaps a tutorial. Look out for
-this in the svn HEAD if you want the latest. I may make a new release
-(0.1.7) in perhaps a month or so.
+this in the svn HEAD if you want the latest. 
 </p>
   <p>
 To check out the latest (HEAD) revision, you can do:
@@ -410,8 +409,11 @@ To check out the revision tested as of this writing (2008-04-07), you can do:
 svn co -r18 https://guppy-pe.svn.sourceforge.net/svnroot/guppy-pe/trunk/guppy guppy
 
 </pre>
-  <p> Older source code in tar gzip format.</p>
+  <p> Source code releases.</p>
   <table>
+   <tr>
+    <td><a href='http://pypi.python.org/pypi/guppy/0.1.7'> guppy-0.1.7</a></td>
+    <td> Updated 2008-04-08. Works with 64 bits and Python 2.6 .</td></tr>
    <tr>
     <td><a href='http://guppy-pe.sourceforge.net/guppy-0.1.6.tar.gz'> guppy-0.1.6.tar.gz</a></td>
     <td>
@@ -504,4 +506,4 @@ system:
    <dd><a href='http://sourceforge.net/tracker/?group_id=105577&atid=641821'> http://sourceforge.net/tracker/?group_id=105577&amp;atid=641821</a></dd>
    <dt> The Sourceforge project summary page is:</dt>
    <dd><a href='http://sourceforge.net/projects/guppy-pe'> http://sourceforge.net/projects/guppy-pe</a></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Mon Apr  7 19:21:02 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue Apr  8 18:17:03 2008</div></body></html>
